# trt_pose

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindTensorRT.cmake  FindVideoSDK.cmake
graphics/: Buffer.h  Framebuffer.cpp  Framebuffer.h  Lines.h  Quad.cpp  Quad.h  Shader.cpp  Texture.cpp  Texture.h  Texture3D.cpp  Texture3D.h  Window.cpp  glhelper.h
include/: app.h  app_k4a.h  app_rs.h
shaders/: bufferToImages.comp  imageToBuffer.comp  screenQuad.frag  screenQuad.vert  screenSkeleton.frag  screenSkeleton.vert
src/: app.cpp  app_k4a.cpp  app_rs.cpp
src/parse/: test_all.cpp
